use jdk6-compatible base64 converter